welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:40: error: not found: value growflowers1
growflowers1()
^